force-app/main/default/objects/CreditNote__c/CreditNote__c.object-meta.xml
<CustomObject>
    <description>[###][CreditNote__c] Notas de crédito</description>
    <label>Nota de Crédito</label>
    <nameField>
        <displayFormat>NC-{000000000}</displayFormat>
        <label>Nome de Nota de Crédito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas de Crédito</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>