force-app/main/default/objects/CreditNote__c/fields/AccountGoalLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountGoalLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Meta de campanha atingida que deu origem à nota de crédito.</description>
    <label>Meta de Campanha</label>
    <referenceTo>AccountGoal__c</referenceTo>
    <relationshipName>CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>