force-app/main/default/objects/CreditNote__c/fields/ErrorMessageTxt__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessageTxt__c</fullName>
    <label>Mensagem Erro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>