force-app/main/default/objects/CreditNote__c/fields/InstallmentNumberNmb__c.field-meta.xml
<CustomField>
    <fullName>InstallmentNumberNmb__c</fullName>
    <label>Número de Parcelas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>