force-app/main/default/objects/CreditNote__c/fields/ManagersManagerLkp__c.field-meta.xml
<CustomField>
    <fullName>ManagersManagerLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente do gerente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>