force-app/main/default/objects/CreditNote__c/fields/SAPCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>SAPCodeTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código SAP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>