force-app/main/default/objects/CreditNote__c/fields/SellerCoordinatorLkp__c.field-meta.xml
<CustomField>
    <fullName>SellerCoordinatorLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordenador do Vendedor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SellerCreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>