force-app/main/default/objects/CreditNote__c/fields/SentToSAPBln__c.field-meta.xml
<CustomField>
    <fullName>SentToSAPBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrado com o SAP</label>
    <type>Checkbox</type>
</CustomField>