force-app/main/default/objects/CreditNote__c/fields/TypeTxt__c.field-meta.xml
<CustomField>
    <fullName>TypeTxt__c</fullName>
    <label>Tipo de Solicitação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditSolcitationType</valueSetName>
    </valueSet>
</CustomField>