force-app/main/default/objects/CreditNote__c/validationRules/GeneratedCreditEdition.validationRule-meta.xml
<ValidationRule>
    <fullName>GeneratedCreditEdition</fullName>
    <active>true</active>
    <description>Não permite o vendedor editar um registro de NC se for do tipo &quot;Crédito Gerado&quot;</description>
    <errorConditionFormula>$Profile.Name = &apos;Vendedor&apos; &amp;&amp;   ISPICKVAL( Type__c , &apos;Crédito Campanha&apos;)</errorConditionFormula>
    <errorMessage>Esse tipo de usuário não pode editar uma Nota de Crédito do tipo &quot;Crédito Gerado&quot;</errorMessage>
</ValidationRule>