force-app/main/default/objects/CreditNote__c/validationRules/InstallmentNegativeNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>InstallmentNegativeNumber</fullName>
    <active>true</active>
    <description>Não permite um número de parcelas negativo para uma NC</description>
    <errorConditionFormula>(InstallmentNumberNmb__c &lt;= 0)</errorConditionFormula>
    <errorMessage>O número de parcelas deve ser positivo</errorMessage>
</ValidationRule>