force-app/main/default/objects/CreditNote__c/validationRules/NCNegativeValue.validationRule-meta.xml
<ValidationRule>
    <fullName>NCNegativeValue</fullName>
    <active>true</active>
    <description>Não permite uma NC com um valor negativo ou 0</description>
    <errorConditionFormula>Value__c &lt;= 0</errorConditionFormula>
    <errorMessage>O valor deve ser maior do que 0</errorMessage>
</ValidationRule>