force-app/main/default/objects/CreditNote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Value__c</columns>
    <columns>Status__c</columns>
    <columns>AccountGoalLkp__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>